--- a/package.json
+++ b/package.json
@@ -1,14 +1,19 @@
 {
-  "name": "telegram-clan-bot-node-render",
+  "name": "telegram-clan-bot",
   "version": "1.0.0",
+  "description": "Telegram Clan Bot with gifts like PUBG",
   "main": "index.js",
   "scripts": {
     "start": "node index.js"
   },
   "dependencies": {
+    "axios": "^1.7.2",
     "express": "^4.18.2",
+    "dotenv": "^16.3.1",
     "sqlite3": "^5.1.6",
-    "dotenv": "^16.4.0",
-    "axios": "^1.4.0"
+    "sqlite": "^5.1.0"
+  },
+  "engines": {
+    "node": ">=18"
   }
 }
